add test for conversion